api-cleanup-check.log
error: this file contains an unclosed delimiter
   --> /home/runner/work/phenix-stitch/phenix-stitch/crates/phenix-mcp-core/src/mcp.rs:553:3
    |
167 | impl McpServer {
    |                - unclosed delimiter
...
230 |     fn handle_request(&self, request: &Value) -> Option<Value> {
    |                                                                - unclosed delimiter
...
236 |         match method {
    |                      - unclosed delimiter
237 |             "initialize" => {
    |                             - unclosed delimiter
...
243 |                 Some(json!({
    |                     - unclosed delimiter
...
257 |                         "serverInfo": {
    |                                       - this delimiter might not be properly closed...
...
520 |         }
    |         - ...as it matches this but it has different indentation
...
553 | }
    |  ^

Error writing files: failed to resolve mod `mcp`: cannot parse /home/runner/work/phenix-stitch/phenix-stitch/crates/phenix-mcp-core/src/mcp.rs
error[E0748]: unterminated raw string
   --> /home/runner/work/phenix-stitch/phenix-stitch/crates/stitch/src/workspace.rs:539:13
    |
539 |             r#"{
    |             ^ unterminated raw string
    |
    = note: this raw string should be terminated with `"#`

Error writing files: failed to resolve mod `workspace`: cannot parse /home/runner/work/phenix-stitch/phenix-stitch/crates/stitch/src/workspace.rs
    Updating crates.io index
 Downloading crates ...
  Downloaded anstyle-query v1.1.5
  Downloaded iana-time-zone v0.1.65
  Downloaded colorchoice v1.0.5
  Downloaded anstyle-parse v1.0.0
  Downloaded cfg-if v1.0.4
  Downloaded equivalent v1.0.2
  Downloaded errno v0.3.14
  Downloaded is_terminal_polyfill v1.70.2
  Downloaded heck v0.5.0
  Downloaded itoa v1.0.18
  Downloaded utf8parse v0.2.2
  Downloaded clap_lex v1.1.0
  Downloaded fixedbitset v0.4.2
  Downloaded anstyle v1.0.14
  Downloaded clap_derive v4.6.1
  Downloaded fastrand v2.4.1
  Downloaded zmij v1.0.23
  Downloaded autocfg v1.5.1
  Downloaded strsim v0.11.1
  Downloaded quote v1.0.46
  Downloaded anstream v1.0.0
  Downloaded clap v4.6.1
  Downloaded once_cell v1.21.4
  Downloaded getrandom v0.4.3
  Downloaded bitflags v2.13.0
  Downloaded proc-macro2 v1.0.106
  Downloaded tempfile v3.27.0
  Downloaded num-traits v0.2.19
  Downloaded serde_core v1.0.228
  Downloaded serde_derive v1.0.228
  Downloaded unicode-ident v1.0.24
  Downloaded uuid v1.23.5
  Downloaded memchr v2.8.3
  Downloaded indexmap v2.14.0
  Downloaded serde v1.0.228
  Downloaded hashbrown v0.17.1
  Downloaded serde_json v1.0.150
  Downloaded clap_builder v4.6.0
  Downloaded chrono v0.4.45
  Downloaded syn v2.0.118
  Downloaded rustix v1.1.4
  Downloaded petgraph v0.6.5
  Downloaded libc v0.2.186
  Downloaded linux-raw-sys v0.12.1
   Compiling proc-macro2 v1.0.106
   Compiling quote v1.0.46
   Compiling unicode-ident v1.0.24
   Compiling serde_core v1.0.228
   Compiling autocfg v1.5.1
   Compiling num-traits v0.2.19
   Compiling zmij v1.0.23
   Compiling libc v0.2.186
   Compiling serde v1.0.228
   Compiling serde_json v1.0.150
   Compiling syn v2.0.118
    Checking itoa v1.0.18
    Checking iana-time-zone v0.1.65
   Compiling getrandom v0.4.3
    Checking memchr v2.8.3
    Checking chrono v0.4.45
    Checking cfg-if v1.0.4
    Checking equivalent v1.0.2
    Checking hashbrown v0.17.1
    Checking fixedbitset v0.4.2
    Checking utf8parse v0.2.2
    Checking anstyle-parse v1.0.0
    Checking indexmap v2.14.0
    Checking anstyle v1.0.14
    Checking anstyle-query v1.1.5
    Checking is_terminal_polyfill v1.70.2
    Checking colorchoice v1.0.5
    Checking uuid v1.23.5
    Checking anstream v1.0.0
   Compiling rustix v1.1.4
   Compiling heck v0.5.0
    Checking clap_lex v1.1.0
    Checking strsim v0.11.1
    Checking petgraph v0.6.5
    Checking clap_builder v4.6.0
    Checking bitflags v2.13.0
    Checking linux-raw-sys v0.12.1
    Checking once_cell v1.21.4
    Checking fastrand v2.4.1
   Compiling serde_derive v1.0.228
   Compiling clap_derive v4.6.1
    Checking tempfile v3.27.0
    Checking clap v4.6.1
    Checking stitch v0.1.0 (/home/runner/work/phenix-stitch/phenix-stitch/crates/stitch)
    Checking phenix-mcp-core v0.1.0 (/home/runner/work/phenix-stitch/phenix-stitch/crates/phenix-mcp-core)
error: this file contains an unclosed delimiter
   --> crates/phenix-mcp-core/src/mcp.rs:553:3
    |
167 | impl McpServer {
    |                - unclosed delimiter
...
230 |     fn handle_request(&self, request: &Value) -> Option<Value> {
    |                                                                - unclosed delimiter
...
236 |         match method {
    |                      - unclosed delimiter
237 |             "initialize" => {
    |                             - unclosed delimiter
...
243 |                 Some(json!({
    |                     - unclosed delimiter
...
257 |                         "serverInfo": {
    |                                       - this delimiter might not be properly closed...
...
520 |         }
    |         - ...as it matches this but it has different indentation
...
553 | }
    |  ^

error: could not compile `phenix-mcp-core` (lib test) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `phenix-mcp-core` (lib) due to 1 previous error
error[E0748]: unterminated raw string
   --> crates/stitch/src/workspace.rs:539:13
    |
539 |             r#"{
    |             ^ unterminated raw string
    |
    = note: this raw string should be terminated with `"#`

For more information about this error, try `rustc --explain E0748`.
error: could not compile `stitch` (lib test) due to 1 previous error
error: could not compile `stitch` (lib) due to 1 previous error
   Compiling serde_core v1.0.228
   Compiling num-traits v0.2.19
   Compiling zmij v1.0.23
   Compiling libc v0.2.186
   Compiling iana-time-zone v0.1.65
   Compiling itoa v1.0.18
   Compiling memchr v2.8.3
   Compiling cfg-if v1.0.4
   Compiling chrono v0.4.45
   Compiling getrandom v0.4.3
   Compiling hashbrown v0.17.1
   Compiling equivalent v1.0.2
   Compiling fixedbitset v0.4.2
   Compiling utf8parse v0.2.2
   Compiling indexmap v2.14.0
   Compiling anstyle-parse v1.0.0
   Compiling uuid v1.23.5
   Compiling anstyle-query v1.1.5
   Compiling bitflags v2.13.0
   Compiling serde v1.0.228
   Compiling serde_json v1.0.150
   Compiling petgraph v0.6.5
   Compiling linux-raw-sys v0.12.1
   Compiling colorchoice v1.0.5
   Compiling anstyle v1.0.14
   Compiling is_terminal_polyfill v1.70.2
   Compiling rustix v1.1.4
   Compiling anstream v1.0.0
   Compiling clap_lex v1.1.0
   Compiling strsim v0.11.1
   Compiling fastrand v2.4.1
   Compiling once_cell v1.21.4
   Compiling clap_builder v4.6.0
   Compiling stitch v0.1.0 (/home/runner/work/phenix-stitch/phenix-stitch/crates/stitch)
   Compiling phenix-mcp-core v0.1.0 (/home/runner/work/phenix-stitch/phenix-stitch/crates/phenix-mcp-core)
error[E0748]: unterminated raw string
   --> crates/stitch/src/workspace.rs:539:13
    |
539 |             r#"{
    |             ^ unterminated raw string
    |
    = note: this raw string should be terminated with `"#`

For more information about this error, try `rustc --explain E0748`.
error: this file contains an unclosed delimiter
   --> crates/phenix-mcp-core/src/mcp.rs:553:3
    |
167 | impl McpServer {
    |                - unclosed delimiter
...
230 |     fn handle_request(&self, request: &Value) -> Option<Value> {
    |                                                                - unclosed delimiter
...
236 |         match method {
    |                      - unclosed delimiter
237 |             "initialize" => {
    |                             - unclosed delimiter
...
243 |                 Some(json!({
    |                     - unclosed delimiter
...
257 |                         "serverInfo": {
    |                                       - this delimiter might not be properly closed...
...
520 |         }
    |         - ...as it matches this but it has different indentation
...
553 | }
    |  ^

error: could not compile `stitch` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `phenix-mcp-core` (lib) due to 1 previous error

script=0 fmt=1 check=101 test=101
